<resources>
    <string name="app_name">Ourvedic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="facebook_app_id">217810733256076</string>
    <string name="fb_login_protocol_scheme">fb217810733256076</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Booking</string>
    <string name="menu_slideshow">Settings</string>
    <string name="profile">Profile</string>
    <string name="passwordreset">Password Reset</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flat_house_no_building_apartment">Flat, House no., Building, Apartment</string>
    <string name="area_colony_street_no_sector">Area, Colony, Street no., Sector</string>
    <string name="landmark_e_g_near_apollo_hospital">Landmark e.g. near Apollo Hospital</string>
    <string name="town_city_with_state">Town/City with State</string>
    <string name="pin_code">PIN code</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
</resources>