<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_round_book_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/ic_baseline_content_paste_24"
            android:title="@string/menu_myOrders" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_round_account_circle_24"
            android:title="@string/profile"/>
    </group>
</menu>